<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    <ImageView
        android:id="@+id/imageViewRecipe"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_image_24"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewRecipe"
        android:text="@string/click_icon_to_insert_picture"
        android:textStyle="italic"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinnertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt4"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:textStyle="italic" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/spinnertype"
        android:hint="@string/recipe_name">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:hint="@string/recipe_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/txt"
        android:hint="@string/ingredients">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:hint="@string/ingredient"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/txt2"
        android:hint="@string/steps_to_make">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_marginTop="5dp"
        android:hint="@string/steps"
        android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
    android:id="@+id/buttonSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt3"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents.Light.Bridge"
    android:text="@string/save_recipe"/>

    </RelativeLayout>

</ScrollView>