<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ListRecipe">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtingre3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/recipe_type"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/recipeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtingre3"
        android:minHeight="48dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeType"
        android:layout_marginTop="16dp"
        android:hint="@string/recipe_name"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/recipeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/txtname"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewRecipe"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/baseline_image_24"
        android:layout_below="@id/recipeSpinner"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtingre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewRecipe"
        android:layout_marginTop="16dp"
        android:hint="@string/ingredients"/>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/editTextIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtingre2"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtingre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextIngredients"
        android:layout_marginTop="16dp"
        android:hint="@string/step_to_make"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/editTextDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtingre"
        android:layout_marginTop="16dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:theme="@style/Theme.MaterialComponents.Light.Bridge"
        android:text="@string/home"/>

    </RelativeLayout>



</ScrollView>