<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchRecipe">




    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/editTextRecipeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Enter Recipe Type"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRecipeType"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:text="Search"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/editTextRecipeType"/>

        <ImageView
            android:id="@+id/imagerecipe"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/buttonSearch">

        </ImageView>




        <TextView
            android:id="@+id/txtpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/type_of_recipe"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="150dp"
            app:layout_constraintTop_toBottomOf="@+id/imagerecipe"/>

        <TextView
            android:id="@+id/spinnertyperecipe"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/typefood"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="#5A5858"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpass" />

        <TextView
            android:id="@+id/txtingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/ingredient"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="238dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnertyperecipe"/>

        <TextView
            android:id="@+id/txtingredient2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/typefood"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="#5A5858"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtingredient" />


        <TextView
            android:id="@+id/textstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/how_to_prepare"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="238dp"
            app:layout_constraintTop_toBottomOf="@+id/txtingredient2"/>

        <TextView
            android:id="@+id/textstep2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/how_to_prepare"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#5A5858"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textstep" />







    </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>